[package]
name = "pipetee"
version = "1.0.1"
edition = "2021"
rust-version = "1.65"

readme = "README.md"
repository = "https://github.com/mark-i-m/pipetee"
description = "A simple, fast, no-dependencies UNIX utility to print the contents of stdin to the terminal *and* forward them to stdout at the same time. Useful for debugging."
license = "MIT"
keywords = ["pipe", "tee", "stdout", "redirect", "tty"]
categories = ["command-line-utilities"]

[[bin]]
name = "pt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
